--- a/styles/index.css
+++ b/styles/index.css
@@ -106,6 +106,7 @@ h1 {
 }
 #api-weather {
     display:flex;
+    background-color: yellow;
 }
 #bottom {
     display: flex;
@@ -183,10 +184,13 @@ select {
 .arrow {
     color:#36454F;
 }
+#display-temp{
+    padding-bottom:.45em;
+}
 
 
 
-#desired-temp, #actual-temp, #desired-sky, .sun, .sun img, #sun-1, #sun-2, #sun-3, #banner, #bottom, #top-banner, .arrows, #up-temp, #up-sky, #down-sky {
+#desired-temp, #actual-temp, #desired-sky, .sun, .sun img, #sun-1, #sun-2, #sun-3, #banner, #bottom, #top-banner, .arrows, #up-temp, #up-sky, #down-sky, #api-weather {
     background-color: white;
 
 }
