--- a/styles/index.css
+++ b/styles/index.css
@@ -1,4 +1,3 @@
-/* Note that colors are for discussing code with classmates. */
 img,h1,h2,h3,h4,p,li,ul,.footer {
     margin: 0;
     padding: 0;
@@ -171,6 +170,10 @@ select {
 
 #mid-bottom-duo {
     width:100%;
+}
+
+#hiddenpix {
+    display:none;
 }
 
 /* Colors for discussing Java Script with classmates. */
